hphp/test/zend/bad/tests/security/open_basedir_001.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
	die('skip.. only for unix');
}
if (!is_dir("/usr/local/bin")) {
	die('skip.. no /usr/local/bin on this machine');
}